カラムを移動できるようにした
カラム移動により、カラムごとのサーチイベントがうまく紐づかなくなったので修正

--- a/fcm/clients/templates/clients/base.html
+++ b/fcm/clients/templates/clients/base.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'clients/css/vendor/jquery-ui.min.css' %}"/>
     <link rel="stylesheet" type="text/css" href="{% static 'clients/css/vendor/remodal.css' %}"/>
     <link rel="stylesheet" type="text/css" href="{% static 'clients/css/vendor/remodal-default-theme.css' %}"/>
+    <link rel="stylesheet" type="text/css" href="{% static 'clients/css/vendor/colReorder.dataTables.css' %}"/>
     <script type="text/javascript" src="{% static 'clients/js/polyfill/promise-polyfill.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'clients/js/vendor/jquery-3.5.0.min.js' %}"></script>
     <script type="text/javascript" charset="utf8" src="{% static 'clients/js/vendor/datatables.min.js' %}"></script>
@@ -16,6 +17,7 @@
     <script type="text/javascript" charset="utf8" src="{% static 'clients/js/vendor/buttons.colVis.min.js' %}"></script>
     <script type="text/javascript" charset="utf8" src="{% static 'clients/js/vendor/jquery-ui.min.js' %}"></script>
     <script type="text/javascript" charset="utf8" src="{% static 'clients/js/vendor/remodal.js' %}"></script>
+    <script type="text/javascript" charset="utf8" src="{% static 'clients/js/vendor/dataTables.colReorder.js' %}"></script>
     {% block head %}{% endblock %}
 </head>
 <body>
