顧客作成・変更画面で、ClientID入力により取引形態を取得・表示するようにした
＋ボタンで追加した行にには適用できていない。

--- a/fcm/clients/templates/admin/clients/includes/fieldset.html
+++ b/fcm/clients/templates/admin/clients/includes/fieldset.html
@@ -24,9 +24,9 @@
                     {% endif %}
                 </div>
             {% endfor %}
-            <div>
-                <label><b>取引可能形態(ReadOnly):</b></label>
-                <input type="text" class="vTextField" maxlength="20" readonly>
+            <div class="trade-type">
+                <label for="trade-type-input-{{ loop_count }}"><b>取引可能形態(ReadOnly):</b></label>
+                <input type="text" class="vTextField" id="trade-type-input-{{ loop_count }}" value="" readonly>
             </div>
         </div>
     {% endfor %}
