--- a/fcm/clients/templates/admin/clients/client_classifier/edit_inline/stacked.html
+++ b/fcm/clients/templates/admin/clients/client_classifier/edit_inline/stacked.html
@@ -1,4 +1,25 @@
 {% load i18n admin_urls static %}
+<script type="text/javascript" src="{% static 'clients/js/vendor/jquery-3.5.0.min.js' %}"></script>
+<script type="text/javascript">
+  'use strict';
+  $(function() {
+    $('.fieldBox.field-identifier input').on('change', function(event) {
+      let $input = $(this);
+      let client_id = $input.val();
+      $.ajax({
+        url: '{% url "clients:ajax_trade_type" %}',
+        type: 'GET',
+        data: {
+            client_id: client_id,
+        },
+        dataType: 'json',
+      }).done(function(response){
+        let $target = $input.parent('div').siblings('.trade-type').children('input');
+        $target.val(response.trade_type);
+      })
+    })
+  })
+</script>
 <div class="js-inline-admin-formset inline-group"
      id="{{ inline_admin_formset.formset.prefix }}-group"
      data-inline-type="stacked"
@@ -16,7 +37,7 @@
   </h3>
   {% if inline_admin_form.form.non_field_errors %}{{ inline_admin_form.form.non_field_errors }}{% endif %}
   {% for fieldset in inline_admin_form %}
-    {% include "admin/clients/includes/fieldset.html" %}
+    {% include "admin/clients/includes/fieldset.html" with loop_count=forloop.parentloop.counter0 %}
   {% endfor %}
   {% if inline_admin_form.needs_explicit_pk_field %}{{ inline_admin_form.pk_field.field }}{% endif %}
   {% if inline_admin_form.fk_field %}{{ inline_admin_form.fk_field.field }}{% endif %}
