--- a/fcm/clients/templates/clients/table.html
+++ b/fcm/clients/templates/clients/table.html
@@ -20,10 +20,10 @@
         // Create header
         let searchRow = $('#search-row');
         let colNameRow = $('#col-name-row');
-        {% for col_name in col_names %}
+        {% for col_name, col_group in columns %}
             searchRow.append(
                 $("<th></th>", {
-                    id: "search-" + "{{ col_name }}"
+                    id: "search-" + "{{ col_name }}",
                 }).append(
                     $("<input>", {
                         type: "text",
@@ -32,7 +32,9 @@
                 )
             );
             colNameRow.append(
-                $("<th></th>").text("{{ col_name }}")
+                $("<th></th>", {
+                    "class": "{{ col_group.css_classes_str }}",
+                }).text("{{ col_name }}")
             );
         {% endfor %}
 
