カラムグループごとの表示・非表示操作用のボタン作成
ボタンだけ。機能は未実装。

--- a/fcm/clients/static/clients/css/table.css
+++ b/fcm/clients/static/clients/css/table.css
@@ -8,12 +8,13 @@
     position: relative;
 }
 
+/*
 .ope-item button {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
 }
-
+*/
 /* Column Chooser */
 .modal-body {
     display: flex;
