TradeTypeとViewCodeSessionのformを1つにまとめた

--- a/fcm/clients/templates/clients/add_client.html
+++ b/fcm/clients/templates/clients/add_client.html
@@ -138,7 +138,6 @@
                             {{ view_code_session_form.connection_end_date }}
                         </div>
                         <div id="session-mid2">
-                            {{ session_trade_type_form.non_field_errors }}
                             <table id="session-trade-type">
                                 <tr>
                                     <th></th>
@@ -150,46 +149,46 @@
                                 <tr>
                                     <td>DISC</td>
                                     <td>
-                                        {{ session_trade_type_form.eq_disc }}
+                                        {{ view_code_session_form.eq_disc }}
                                     </td>
                                     <td>
-                                        {{ session_trade_type_form.fu_disc }}
+                                        {{ view_code_session_form.fu_disc }}
                                     </td>
                                     <td>
-                                        {{ session_trade_type_form.op_disc }}
+                                        {{ view_code_session_form.op_disc }}
                                     </td>
                                     <td>
-                                        {{ session_trade_type_form.sp_disc }}
+                                        {{ view_code_session_form.sp_disc }}
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>DMA</td>
                                     <td>
-                                        {{ session_trade_type_form.eq_dma }}
+                                        {{ view_code_session_form.eq_dma }}
                                     </td>
                                     <td>
-                                        {{ session_trade_type_form.fu_dma }}
+                                        {{ view_code_session_form.fu_dma }}
                                     </td>
                                     <td>
-                                        {{ session_trade_type_form.op_dma }}
+                                        {{ view_code_session_form.op_dma }}
                                     </td>
                                     <td>
-                                        {{ session_trade_type_form.sp_dma }}
+                                        {{ view_code_session_form.sp_dma }}
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>DSA</td>
                                     <td>
-                                        {{ session_trade_type_form.eq_dsa }}
+                                        {{ view_code_session_form.eq_dsa }}
                                     </td>
                                     <td>
-                                        {{ session_trade_type_form.fu_dsa }}
+                                        {{ view_code_session_form.fu_dsa }}
                                     </td>
                                     <td>
-                                        {{ session_trade_type_form.op_dsa }}
+                                        {{ view_code_session_form.op_dsa }}
                                     </td>
                                     <td>
-                                        {{ session_trade_type_form.sp_dsa }}
+                                        {{ view_code_session_form.sp_dsa }}
                                     </td>
                                 </tr>
                             </table>
